taxi order functional

--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -177,10 +177,8 @@
 				font-size: 24px
 				margin-bottom: 10px
 		&__inputs
-			grid-template-columns: 1fr 1fr
+			grid-template-columns: 1fr
 			label
-				&:first-child
-					grid-column: 1/-1
 				span
 					font-size: 12px
 					font-weight: 600
@@ -190,7 +188,7 @@
 			&-note
 				order: 2
 				grid-column: 1/-1
-			&-wide
+
 
 	.about
 		min-height: initial
