--- a/css/main.css
+++ b/css/main.css
@@ -112,6 +112,7 @@ body {
   font-weight: 300;
   box-shadow: 0 0 3px 3px rgba(200, 0, 0, 0.2);
   overflow-x: hidden;
+  min-height: calc(100vh + 1px);
   -webkit-transform-origin: top;
           transform-origin: top;
 }
@@ -720,7 +721,7 @@ input[type='radio']:checked::before {
 
 .order__inputs {
   display: grid;
-  grid-template-columns: 2fr 1fr 1fr;
+  grid-template-columns: 2fr 1fr;
   grid-gap: 15px 20px;
 }
 
@@ -736,7 +737,6 @@ input[type='radio']:checked::before {
 }
 
 .order__inputs label span sup {
-  margin-left: -4px;
   color: #E73834;
   vertical-align: middle;
   font-size: inherit;
@@ -802,8 +802,207 @@ input[type='radio']:checked::before {
   margin: 25px 0;
 }
 
+/*================= POPOP BOX  =============== */
+.popup-box {
+  visibility: hidden;
+  opacity: 0;
+  position: fixed;
+  background-color: rgba(0, 0, 0, 0.8);
+  z-index: 1000;
+  left: 0;
+  top: 0;
+  width: 100vw;
+  height: 100vh;
+  overflow: auto;
+  padding: 15px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.popup-box[data-visible='true'] {
+  -webkit-animation: OpenModal 0.3s both;
+          animation: OpenModal 0.3s both;
+  visibility: visible;
+  opacity: 1;
+}
+
+.popup-box[data-visible='false'] {
+  -webkit-animation: CloseModal 0.3s both;
+          animation: CloseModal 0.3s both;
+  visibility: hidden;
+  opacity: 0;
+}
+
+.popup-box__close {
+  position: absolute;
+  right: 5px;
+  top: 5px;
+  background: none;
+  color: #000;
+  font-size: 28px;
+  line-height: 1;
+  padding: 0;
+  margin: 0;
+  outline: none;
+  border: none;
+  cursor: pointer;
+  z-index: 3;
+}
+
+.popup-box__close::before {
+  content: '\2715';
+}
+
+.popup-box__content {
+  position: relative;
+  font-size: 18px;
+  width: 100%;
+  max-width: 760px;
+  max-height: 100%;
+  min-height: 360px;
+  overflow-y: auto;
+  background-color: #fff;
+  padding: 50px 30px;
+}
+
+.popup-box__title {
+  text-align: center;
+  font-size: 36px;
+  line-height: 1;
+  font-weight: 300;
+  margin-bottom: 25px;
+}
+
+.popup-box__actions {
+  max-width: 500px;
+  margin: 0 auto;
+  margin-top: 20px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.popup-box__actions .btn {
+  padding: 15px 47px;
+}
+
+.popup-box__btn-cancel {
+  font-weight: 300;
+  border: none;
+  color: #909090;
+  box-shadow: none;
+}
+
+.popup-box__btn-cancel span {
+  font-size: 24px;
+  border-bottom: 1px solid #909090;
+}
+
+.popup-box__btn-accept:active span {
+  margin-top: 2px;
+}
+
+.popup-box__body {
+  max-width: 600px;
+  margin: 0 auto;
+}
+
+.popup-box__code {
+  max-width: 240px;
+  margin: 0 auto;
+  margin-bottom: 40px;
+  text-align: center;
+  font-size: 18px;
+}
+
+.popup-box__code p {
+  line-height: 1.2;
+}
+
+.popup-box__code p b {
+  color: #E73834;
+  font-size: 36px;
+  font-weight: 700;
+}
+
+.popup-box__timer {
+  margin-top: 60px;
+}
+
+.popup-box__found {
+  text-align: center;
+}
+
+.popup-box__found-txt {
+  margin-bottom: 45px;
+}
+
+.popup-box__found-btn {
+  min-width: 135px;
+  padding: 15px;
+}
+
+.popup-box__notfound {
+  text-align: center;
+}
+
+.popup-box__notfound-img {
+  max-width: 135px;
+  margin: 0 auto;
+  margin-bottom: 15px;
+}
+
+.popup-box__notfound-later {
+  font-size: 18px;
+  font-family: 'Gilroy', sans-serif;
+  line-height: normal;
+  text-align: center;
+  -webkit-text-decoration-line: underline;
+          text-decoration-line: underline;
+}
+
+/*================= COUNTDOWN  =============== */
+.countdown {
+  position: relative;
+  margin: auto;
+  height: 140px;
+  width: 140px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.countdown__number {
+  color: #000;
+  font-size: 64px;
+  font-weight: 900;
+  display: inline-block;
+}
+
+.countdown svg {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  -webkit-transform: rotateY(-180deg) rotateZ(-90deg);
+          transform: rotateY(-180deg) rotateZ(-90deg);
+}
+
+.countdown svg circle {
+  stroke-dasharray: 407px;
+  stroke-dashoffset: 0px;
+  stroke-linecap: round;
+  stroke-width: 8px;
+  stroke: #E73834;
+  fill: none;
+  -webkit-animation: countdown 60s linear infinite forwards;
+          animation: countdown 60s linear infinite forwards;
+}
+
 /*==============================================================
-					FOOTER START */
+				FOOTER START */
 /*============================================================= */
 .footer {
   padding-bottom: 10px;
@@ -872,6 +1071,24 @@ input[type='radio']:checked::before {
 .footer__copy {
   font-size: 24px;
   line-height: 1;
+}
+
+@-webkit-keyframes countdown {
+  from {
+    stroke-dashoffset: 0px;
+  }
+  to {
+    stroke-dashoffset: 407px;
+  }
+}
+
+@keyframes countdown {
+  from {
+    stroke-dashoffset: 0px;
+  }
+  to {
+    stroke-dashoffset: 407px;
+  }
 }
 
 @media only screen and (min-width: 1920px) {
@@ -1088,10 +1305,7 @@ input[type='radio']:checked::before {
     margin-bottom: 10px;
   }
   .order__inputs {
-    grid-template-columns: 1fr 1fr;
-  }
-  .order__inputs label:first-child {
-    grid-column: 1/-1;
+    grid-template-columns: 1fr;
   }
   .order__inputs label span {
     font-size: 12px;
