--- a/css/main.css
+++ b/css/main.css
@@ -1091,6 +1091,62 @@ input[type='radio']:checked::before {
   }
 }
 
+@-webkit-keyframes OpenModal {
+  from {
+    -webkit-transform: scale(1.1);
+            transform: scale(1.1);
+    opacity: 0;
+  }
+  to {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+    opacity: 1;
+  }
+}
+
+@keyframes OpenModal {
+  from {
+    -webkit-transform: scale(1.1);
+            transform: scale(1.1);
+    opacity: 0;
+  }
+  to {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+    opacity: 1;
+  }
+}
+
+@-webkit-keyframes CloseModal {
+  from {
+    visibility: visible;
+    -webkit-transform: scale(1);
+            transform: scale(1);
+    opacity: 1;
+  }
+  to {
+    -webkit-transform: scale(1.1);
+            transform: scale(1.1);
+    opacity: 0;
+    visibility: hidden;
+  }
+}
+
+@keyframes CloseModal {
+  from {
+    visibility: visible;
+    -webkit-transform: scale(1);
+            transform: scale(1);
+    opacity: 1;
+  }
+  to {
+    -webkit-transform: scale(1.1);
+            transform: scale(1.1);
+    opacity: 0;
+    visibility: hidden;
+  }
+}
+
 @media only screen and (min-width: 1920px) {
   .about {
     background-position-x: right;
