--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -211,3 +211,16 @@
 				font-size: 12px
 				ul
 					margin: 15px 0
+	.popup-box
+		&__content
+			min-height: 330px
+			padding: 30px 15px
+		&__title
+			font-size: 24px
+		&__actions .btn
+			padding: 15px 10px
+			min-width: 135px
+		&__btn
+			&-cancel
+				span
+					font-size: 20px
