--- a/sass/main.sass
+++ b/sass/main.sass
@@ -73,7 +73,6 @@ body
 	min-width: 320px
 	max-width: 1920px
 	margin: 0 auto
-	position: relative
 	line-height: 1.65
 	color: #000
 	font-family: var(--main-font)
@@ -209,7 +208,7 @@ input
 				transform: scale(1)
 
 .main
-	min-height: calc(100vh - 210px) /* 100 vh - height(header + footer) */
+	min-height: calc(100vh - 210px) // 100 vh - height(header + footer)
 
 .container
 	width: 100%
